# lamp

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  constants.h  data_types.h  lamp.h  main.c  playback.c  playback.h  playlistitem.c  playlistitem.h  resources.xml  utils.c  utils.h
glade/: lamp.glade  style.css
res/: lamp.desktop  style.css
